<resources>
    <string name="app_name">无线传真</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_create_fax">创建新传真</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">用户名非法</string>
    <string name="error_invalid_password">密码是空的</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入用户名</string>

    <string name="send_box">发件箱</string>
    <string name="recv_box">收件箱</string>
    <string name="star_box">标星文件箱</string>
    <string name="draft_box">草稿箱</string>
    <string name="phonebook_box">通信录</string>
    <string name="setting_box">设置</string>
    <string name="time">时间:</string>
    <string name="subject">标题</string>
    <string name="sender">发送人:</string>
    <string name="send">发送</string>
    <string name="content">内容</string>

    <string name="yesterday">昨天</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="receiver">接收人：</string>
    <string name="add_receiver">通信录选择</string>

    <string name="select_attach">选择传真:</string>
    <string name="filelist">文件列表</string>
    <string name="search_result">搜索结果</string>
    <string name="back">返回</string>
    <string name="transition">reveal</string>
    <string name="menu_combin_title">合并</string>
    <string name="pick_error_format">您选择的图片包含不支持的格式，请重新选择</string>
    <string name="detail_choose_signature_position">请点击屏幕选择签名的位置</string>
    <string name="detail_bottom_sheet_title">请手写签名：</string>
    <string name="detail_signature_del">删除</string>
    <string name="choose_tiff_title">请选择要操作的图片</string>
    <string name="confirm">确定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="show_dialog">弹出对话框</string>
    <string name="select_photo">从相册选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="cancel">取消</string>
</resources>
