<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:navigationIcon="@drawable/action_back"
            android:navigationIcon="@drawable/action_back"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_marginLeft="8dp"
            android:id="@+id/senderlayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/receiver"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType ="number"
                android:text=""
                android:ems="10"
                android:id="@+id/etReceiver"
                android:layout_weight="4" />

            <Button
                android:text="@string/add_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btAddReceiver" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectAttachLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="8dp"
                android:text="@string/select_attach"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />
            <Button
                android:text="@string/select_attach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/btnSelectAttach" />
            <Button
                android:text="拍照"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/select_photo" />
        </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/filelist"
            android:layout_marginLeft="8dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" />
        <FrameLayout
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView5"
            >
            <android.support.v4.view.ViewPager
                android:id="@+id/frag_choose_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <com.merhold.extensiblepageindicator.ExtensiblePageIndicator
                android:id="@+id/flexibleIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:indicatorRadius="4dp"
                app:indicatorPadding="8dp"
                app:indicatorInactiveColor="@color/background_blue"
                app:indicatorActiveColor="@color/colorAccent"
                android:layout_marginBottom="20dp"
                android:layout_gravity="bottom" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>